--- a/nb-app/index.html
+++ b/nb-app/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#030712">
     <meta name="description" content="Nano Banana Pro在线客户端">
     <link rel="apple-touch-icon" href="/pwa-192x192.png">
-    <title>cNB | Nano Banana Pro 在线客户端</title>
+    <title>nbnb | Nano Banana Pro 在线客户端</title>
     <link rel="icon" href="/kuai.svg" type="image/svg+xml" />
     <style>
       .app-loading {
